
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_3__ TYPE_1__ ;


typedef TYPE_1__* dirptr ;
typedef int dirproto ;
struct TYPE_3__ {int * next; int name; } ;


 scalar_t__ xmalloc (int) ;
 int xstrdup (char*) ;

dirptr
newdir (char *name)
{
    dirptr tmp;

    tmp = (dirptr) xmalloc (sizeof (dirproto));
    tmp->name = xstrdup (name);
    tmp->next = ((void*)0);

    return (tmp);
}
